--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,53 +10,51 @@
 <body>
     <header class = "jumbotron jumbotron-fluid .bg-info">My Team</header>
     <main>
-        () => {
-    team.forEach((person) => {
-        if (person.role === "Manager") {
-            return `
-            <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h4 class="card-title">${person.name}</h4>
-                <h6 class="card-text">${person.role}</h6>
+                <h4 class="card-title">Josh</h4>
+                <h6 class="card-text">Manager</h6>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: ${person.ID}</li>
-                    <li class="list-group-item">Email: ${person.email}</li>
-                    <li class="list-group-item">Office number: ${person.officeNumber}</li>
+                    <li class="list-group-item">ID:21</li>
+                    <li class="list-group-item">Email: josh@team.com</li>
+                    <li class="list-group-item">Office number: 3</li>
                 </ul>
             </div>
         </div>
-        `
-        } else if (person.role === "Engineer") {
-            return `
-            <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h4 class="card-title">${person.name}</h4>
-                <h6 class="card-text">${person.role}</h6>
+                <h4 class="card-title">Susan</h4>
+                <h6 class="card-text">Engineer</h6>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: ${person.ID}</li>
-                    <li class="list-group-item">Email: ${person.email}</li>
-                    <li class="list-group-item">Github: <a href="github.com/${person.github}" class="card-link">${person.github}</a></li>
+                    <li class="list-group-item">ID: 52</li>
+                    <li class="list-group-item">Email: susan@team.com</li>
+                    <li class="list-group-item">Github: <a href="github.com/susan123" class="card-link">susan123</a></li>
                 </ul>
             </div>
         </div>
-        `
-        } else if (person.role === "Engineer") {
-            return `
-            <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h4 class="card-title">${person.name}</h4>
-                <h6 class="card-text">${person.role}</h6>
+                <h4 class="card-title">Marin</h4>
+                <h6 class="card-text">Intern</h6>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: ${person.ID}</li>
-                    <li class="list-group-item">Email: ${person.email}</li>
-                    <li class="list-group-item">School: ${person.school} </li>
+                    <li class="list-group-item">ID: 89</li>
+                    <li class="list-group-item">Email: marin@team.com</li>
+                    <li class="list-group-item">School: NYU </li>
                 </ul>
             </div>
         </div>
-        `
-        }
-    })
-}
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h4 class="card-title">Max</h4>
+                <h6 class="card-text">Intern</h6>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">ID: 86</li>
+                    <li class="list-group-item">Email: max@team.com</li>
+                    <li class="list-group-item">School: SCU </li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
+`
